Fix spacing css warnings

--- a/style.css
+++ b/style.css
@@ -69,12 +69,12 @@
 
 .sr-only {
   position: absolute;
-  width: 1px;
-  height: 1px;
+  width: 0.0625rem;
+  height: 0.0625rem;
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: inset(50%);
+  clip: rect(0 0 0 0);
   white-space: nowrap;
   border: 0;
 }
@@ -94,7 +94,7 @@ body {
 .card {
   max-width: 21.875rem;
   width: 100%;
-  height: 596px;
+  height: 37.25rem;
   border-radius: 15px;
   background-color: var(--blue-900);
   padding: 24px;
